started a new application base

--- a/rpi2/fleye/CMakeLists.txt
+++ b/rpi2/fleye/CMakeLists.txt
@@ -33,6 +33,9 @@ add_subdirectory(plugins)
 add_subdirectory(scripts)
 add_subdirectory(shaders)
 
+add_subdirectory(RaspiCam)
+add_subdirectory(TestCamera)
+
 find_package(Jsoncpp REQUIRED)
 add_subdirectory(FleyeModule)
 add_subdirectory(RaspiCore)
