--- a/rpi2/fleye/RaspiCore/CMakeLists.txt
+++ b/rpi2/fleye/RaspiCore/CMakeLists.txt
@@ -1,10 +1,10 @@
-include_directories(../include ${VCINC} ${VCINC}/interface/vcos/pthreads ${VCINC}/interface/vmcs_host/linux)
+include_directories(../include ../RaspiCam ${VCINC} ${VCINC}/interface/vcos/pthreads ${VCINC}/interface/vmcs_host/linux)
 add_definitions(-pthread)
 link_directories(${VCLIB})
 
 file(GLOB RASPICORE_SRC "*.c")
 add_executable(fleye ${RASPICORE_SRC})
 # message("Json lib is ${jsoncpp_LIBRARIES}")
-target_link_libraries(fleye FleyeModule ${jsoncpp_LIBRARIES} thirdparty ${MMAL_LIBS} vcos bcm_host GLESv2 EGL pthread m dl)
+target_link_libraries(fleye RaspiCam FleyeModule ${jsoncpp_LIBRARIES} thirdparty ${MMAL_LIBS} vcos bcm_host GLESv2 EGL pthread m dl)
 install(TARGETS fleye RUNTIME DESTINATION bin)
 
