--- a/sketches/Makefile
+++ b/sketches/Makefile
@@ -38,7 +38,7 @@ CORE=$(shell cat $(WIRING_SRC_DIR)/framework/hardware/$(FAMILY)/boards.txt | gre
 F_CPU=$(shell cat $(WIRING_SRC_DIR)/framework/hardware/$(FAMILY)/boards.txt | grep "$(BOARD)\.build\.f_cpu"|cut -d'=' -f2)
 HARDWARE=$(shell cat $(WIRING_SRC_DIR)/framework/hardware/$(FAMILY)/boards.txt | grep "$(BOARD)\.build\.hardware"|cut -d'=' -f2)
 PROTOCOL=$(shell cat $(WIRING_SRC_DIR)/framework/hardware/$(FAMILY)/boards.txt | grep "$(BOARD)\.upload\.protocol"|cut -d'=' -f2)
-UPLOADBR=$(shell cat $(WIRING_SRC_DIR)/framework/hardware/$(FAMILY)/boards.txt | grep "$(BOARD)\.upload\.speed"|cut -d'=' -f2)
+SERIALSPEED=$(shell cat $(WIRING_SRC_DIR)/framework/hardware/$(FAMILY)/boards.txt | grep "$(BOARD)\.upload\.speed"|cut -d'=' -f2)
 PART=$(shell $AVRDUDE -c $PROTOCOL 2>&1|grep -i "= $(MCU)"|tr -d ' '|cut -d'=' -f1)
 VARIANT=$(FAMILY)-$(BOARD)
 
@@ -100,13 +100,13 @@ debug:
 	echo "Sketches : " $(SKETCHES)
 
 console:
-	cu -t -h -s 9600 -l $(SERIALPORT)
+	cu -t -h -s $(SERIALSPEED) -l $(SERIALPORT)
 
 %.dude:
-	$(AVRDUDE) -c $(PROTOCOL) -p $(MCU) -P $(SERIALPORT) -b $(UPLOADBR) -D -U flash:w:`basename $@ .dude`.hex:i 
+	$(AVRDUDE) -c $(PROTOCOL) -p $(MCU) -P $(SERIALPORT) -b $(SERIALSPEED) -D -U flash:w:`basename $@ .dude`.hex:i 
 
 %.flash: %.hex
-	$(AVRDUDE) -c $(PROTOCOL) -p $(MCU) -P $(SERIALPORT) -b $(UPLOADBR) -D -U flash:w:$<:i 
+	$(AVRDUDE) -c $(PROTOCOL) -p $(MCU) -P $(SERIALPORT) -b $(SERIALSPEED) -D -U flash:w:$<:i 
 
 %.hex: $(BUILD_DIR)/%.$(VARIANT).strip.elf
 	$(OBJCOPY) $(OBJCOPY_ELF2HEX_FLAGS) $< $@
