AvrTLPin refactoring, addition of LCD12864 support

--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -5,4 +5,5 @@ add_subdirectory(AvrTL)
 add_subdirectory(AvrApp)
 add_subdirectory(BasicIO)
 add_subdirectory(LCD1602)
+add_subdirectory(LCD12864)
 add_subdirectory(RFSniffer)
