created separate timescheduler library, started softserial new implementation

--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -2,8 +2,11 @@
 # AVR Template Library, low-level avr access, no Arduino/Wire dependency
 #====================================================================#
 add_subdirectory(AvrTL)
+add_subdirectory(TimeScheduler)
+add_subdirectory(SoftSerial)
 add_subdirectory(AvrApp)
 add_subdirectory(BasicIO)
 add_subdirectory(LCD1602)
 add_subdirectory(LCD12864)
 add_subdirectory(RFSniffer)
+
