--- a/libraries/HWSerial/CMakeLists.txt
+++ b/libraries/HWSerial/CMakeLists.txt
@@ -1,11 +1,11 @@
 #====================================================================#
-# LCD1602 interface. compatible with ByteStream interface, may be used
+# ATmega328 USART0 interface. compatible with ByteStream interface, may be used
 # with a PrintStream
 #====================================================================#
 generate_arduino_library(
-	BasicIO
-	SRCS PrintStream.cpp
-    HDRS ByteStream.h InputStream.h PrintStream.h
-    LIBS AvrTL
+	HWSerial
+	SRCS HWSerialIO.cpp
+    HDRS HWSerialIO.h
+    LIBS BasicIO AvrTL
     NO_AUTOLIBS MANUAL
 	)
