SoftSerial is raw IO, now needs ByteStreamAdapter. TimseScheduler w/ Timer1 doesn't work on attiny85

--- a/libraries/SoftSerial/CMakeLists.txt
+++ b/libraries/SoftSerial/CMakeLists.txt
@@ -6,6 +6,6 @@ generate_arduino_library(
 	SoftSerial
 	SRCS SoftSerial.cpp
     HDRS SoftSerial.h
-    LIBS BasicIO TimeScheduler AvrTL
+    LIBS TimeScheduler AvrTL
     NO_AUTOLIBS MANUAL
 	)
