reliable fast serial communication between main controller and DC Motor controller

--- a/sketches/CMakeLists.txt
+++ b/sketches/CMakeLists.txt
@@ -62,7 +62,7 @@ generate_avr_firmware(
 	)
 
 #====================================================================#
-# DC motor controller, taking inputs from soft-serial input
+# DC motor controller, taking inputs from soft-serial or fast-serial input
 #====================================================================#
 generate_avr_firmware(
 	DCMotorController
@@ -71,6 +71,15 @@ generate_avr_firmware(
 	)
 
 if(NOT "${ARDUINO_DEFAULT_BOARD}" MATCHES "attiny85.*" )
+#====================================================================#
+# DC motor controller fast-serial input tester
+#====================================================================#
+generate_avr_firmware(
+	DCMotorInputTester
+	SRCS DCMotorInputTester.cpp
+	LIBS FastSerial HWSerial AvrTL AvrApp
+	)
+
 #====================================================================#
 # Keypad test
 #====================================================================#
