added digital outputs to puredata Liunkuino object

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,8 @@
+# pre-requisites :
+# git clone https://github.com/queezythegreat/arduino-cmake.git
+# sudo cp -r arduino-cmake /usr/share/
+# sudo chmod -R a+rX /usr/share/arduino-cmake
+
 set(ARDUINO_CMAKE_PATH "/usr/share/arduino-cmake" CACHE STRING "arduino-cmake root path")
 set(CMAKE_TOOLCHAIN_FILE ${ARDUINO_CMAKE_PATH}/cmake/ArduinoToolchain.cmake) # Arduino Toolchain
 set(ARDUINO_CXX_FLAGS "${ARDUINO_CXX_FLAGS} -std=c++11")
