--- a/host/Linkuino/CMakeLists.txt
+++ b/host/Linkuino/CMakeLists.txt
@@ -1,8 +1,11 @@
 include_directories(../../libraries)
 
-add_compile_options(-std=c++11) # in cmake 2.8.12 and later
+add_compile_options(-std=c++11 -fPIC) # in cmake 2.8.12 and later
 
-add_library(pd-linkuino SHARED pd-linkuino.cpp)
+add_library(LinkuinoClient STATIC LinkuinoClient.cpp LinkuinoSerialPort.cpp)
 
-add_executable(linkuino-client linkuino-client.cpp)
-target_link_libraries(linkuino-client m)
+add_library(pd-linkuino MODULE pd-linkuino.cpp )
+target_link_libraries(pd-linkuino LinkuinoClient m)
+
+add_executable(linkuino linkuino_tool.cpp)
+target_link_libraries(linkuino LinkuinoClient m)
